# sudoku

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  __main__.py  examples.csv  pyproject.toml  sudoku.csv
data/: README.md
legacy/: validate.py
scripts/: benchmark_backtracking.py  data_util.sh
src/pydoku/: puzzle.py
src/pydoku/scripts/: benchmark_backtracking.py  benchmark_utils.py
src/pydoku/solver/: __init__.py  abc.py  backtracking.py  exactcover.py  stochastic.ipynb
src/rsdoku/: main.rs
src/sudoku/: __init__.py  cell.py  grid.py  loader.py  puzzle.py  run.py  sudoku.py
src/sudoku/grid/: __init__.py  grid.py
src/sudoku/runner/: __init__.py  hparams.py  loader.py  results.py
src/sudoku/solver/: __init__.py  backtracking.py  solver.py
src/tests/: conftest.py  test_cell.py  test_grid.py  test_solvers.py
sudoku/: _grid.py  app.py  cell.py  dataset.py  exceptions.py  grid.py  profiler.py  run.py  runner.py  sudoku.py  suite.py  tui.tcss  validate.py
sudoku/grid/: __init__.py  cell.py  grid.py  validate.py
sudoku/runner/: __init__.py  loader.py
sudoku/solver/: __init__.py  abc.py  backtracking.ipynb  backtracking.py  exactcover.py  solver.py  stochastic.ipynb  stochastic.py
sudoku/solvers/: __init__.py  abc.py  backtracking.py  exactcover.py
sudoku/sudoku/: board.py
sudoku/sudoku/board/: __init__.py  board.py  v1.py
sudoku/sudoku/solver/: solver.py  v1.py
sudoku/sudoku/solvers/: naive.py
sudoku_cli/: __init__.py  __main__.py  main.py
sudoku_cli/legacy/: examples.csv  grid.py
sudoku_cli/legacy/runner/: __init__.py  loader.py
sudoku_cli/legacy/solver/: __init__.py  backtracking.py  profiler.py  solver.py
sudoku_cli/sudoku/: __init__.py  grid.py
sudoku_cli/sudoku/solvers/: __init__.py  abc.py  backtracking.py  exactcover.py
tests/: conftest.py  examples.csv  test_cell.py  test_grid.py  test_solvers.py  tests.csv
