[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["JBercich <joshbercich@gmail.com>"]
readme = "README.md"

# Main dependencies

[tool.poetry.dependencies]
python = "^3.11"    # Requires below 3.12 for `poetry`
pydantic = "^2.5.3"


# Development dependencies
pydantic-settings = "^2.1.0"
numpy = "^1.26.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"     # Main testing framework for source validation
pdoc3 = "^0.10.0"     # Documentation generation
pre-commit = "^3.6.0" # Development quality assurance

# Build system using poetry

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dependency configurations

[tool.flake8]
max-line-length = 89 # Allow longer line lengths than pep8
ignore = ["F401"]    # Allow module imports from __init__

[tool.interrogate]
fail-under = 50      # Requires 90% docstring coverage
ignore-module = true # Module-level docstrings not required

[tool.isort]
profile = "black" # Import sorts align with `black` formatting
