[tool.poetry]
name = "sudoku-cli"
version = "0.1.0"
description = ""
authors = ["JBercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
sudoku-cli = "sudoku_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
numpy = "^1.26.4"
typer = { extras = ["all"], version = "^0.12.3" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
