[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["JBercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
numpy = "^1.26.4"
textual = "^0.76.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
no_implicit_optional = false

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
